2011-03-06  Kostas Nakos  <knakos@gmail.com>
* atari.[ch], android/*: Implemented autoframeskip functionality
* android/*: Added .com & .exe to supported extensions,
             bugfix crash when sound disabled,
			 added new joystick grace area preference 

2011-02-13  Kostas Nakos  <knakos@gmail.com>
* log.c, atari.c, screen.c, configure.ac, Makefile.in, android/*: Imported the
  android port
* antic.c: Fix dirty screen updates with WORDS_UNALIGNED_OK


2010-12-09  James Wilkinson  <james@slor.net>
* af80.c: prevent extra carriage return in config file setting.


2010-11-25  Petr Stehlik <pstehlik@sophics.cz>
* cartridge.c, cassette.c, cfg.c, devices.c, monitor.c, pbi_scsi.c, sio.c,
  sound_oss.c, statesav.c, ui.c: GCC warnings about unused results fixed
  (mostly return values of fread() and similar libc functions).

* atari.c: fixed benchmarking with SDL (DONT_DISPLAY)


2010-11-24  Petr Stehlik <pstehlik@sophics.cz>
* many files: Tomasz Krasuski's large patch that implements major SDL video
  output improvements - see "Display settings" -> "Video mode settings".

* util.c: fixed Util_stricmp() implementation (was broken for empty strings)


2010-11-23  Petr Stehlik <pstehlik@sophics.cz>
* configure.ac: Matthias Reichl's patches for cross-compilation of the Windows
  version under Debian. Use as follows:
    PATH="/opt/mingw/SDL-1.2.14/bin:${PATH}" \
    CPPFLAGS="-I/opt/mingw/libz-1.2.5/include" \
    LDFLAGS="-L/opt/mingw/libz-1.2.5/lib" \
    ./configure --target=sdl --host=i586-mingw32msvc

* ui.c: Tomasz Krasuski's patch for hiding proper Display entries in PAL mode

* configure.ac: Tomasz Krasuski's patch for termcap being available in other
  libraries (readline, ncurses)


2010-10-05  James Wilkinson  <james@slor.net>
* ui_basic.c: change #ifdef to DIRECTX for DoEvents() call (thanks Matthias)


2010-05-24  Petr Stehlik <pstehlik@sophics.cz>
* atari.c, cartridge.c, configure.ac, Makefile.in: make IDE emulation optional